# Transtreaming

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  environment.yaml  install.sh  manual_search.py  pyproject.toml  requirements.txt  setup.py
.github/: dependabot.yml
.github/workflows/: code-quality-main.yaml  code-quality-pr.yaml
.run/: demo.run.xml  manual_search.run.xml
_legacy/: _new_datamodule.py  argoverse.yaml  data_pipe_datamodule.py  default.yaml
_legacy/data_pipes/: base.py
configs/: _experiment.yaml  demo.yaml  eval.yaml  sap.yaml  serve.yaml  service.yaml  train.yaml  workload.yaml
configs/callbacks/: debugger.yaml  default.yaml  default_test.yaml  default_train.yaml  early_stopping.yaml  ema.yaml  model_checkpoint.yaml  tqdm_progress_bar.yaml  visualize_batch.yaml  visualize_feature.yaml  visualize_grad.yaml
configs/datamodule/: argoverse.yaml  argoverse_a.yaml  argoverse_b.yaml  argoverse_split.yaml  dummy.yaml
configs/debug/: default.yaml  limit.yaml
configs/experiment/: aq_drfpn_l.yaml  aq_drfpn_l_best.yaml  aq_drfpn_m.yaml  aq_drfpn_m_best.yaml  aq_drfpn_s.yaml  aq_drfpn_s_best.yaml  aq_pafpn_s.yaml  corrdiff_drfpn_l.yaml  corrdiff_drfpn_m.yaml  corrdiff_drfpn_s.yaml  damostreamnet_l.yaml  damostreamnet_l_normal.yaml  damostreamnet_m.yaml  damostreamnet_m_normal.yaml  damostreamnet_s.yaml  detr_l.yaml  detr_s.yaml  dummy.yaml  flash_drfpn_s.yaml  longshortnet_l.yaml  longshortnet_l_normal.yaml  longshortnet_m.yaml  longshortnet_m_normal.yaml  longshortnet_s.yaml  sim_drfpn_l.yaml  sim_drfpn_l_best.yaml  sim_drfpn_m.yaml  sim_drfpn_m_best.yaml  sim_drfpn_s.yaml  sim_drfpn_s_best.yaml  streamyolo_l.yaml  streamyolo_m.yaml  streamyolo_plus_l.yaml  streamyolo_plus_m.yaml  streamyolo_plus_s.yaml  streamyolo_s.yaml  streamyolo_s_best.yaml  traque_drfpn_l.yaml  traque_drfpn_m.yaml  traque_drfpn_s.yaml  (+10 more)
configs/hparams_search/: hp_1.yaml  optuna.yaml
configs/hydra/: default.yaml
configs/model/: aq_drfpn_l.yaml  aq_drfpn_s.yaml  aq_pafpn_s.yaml  corrdiff_drfpn_m.yaml  corrdiff_drfpn_s.yaml  damostreamnet_l.yaml  damostreamnet_m.yaml  damostreamnet_s.yaml  detr_l.yaml  detr_pafpn_s.yaml  detr_s.yaml  dummy.yaml  flash_drfpn_s.yaml  longshortnet_l.yaml  longshortnet_m.yaml  longshortnet_s.yaml  sim_drfpn_l.yaml  sim_drfpn_m.yaml  sim_drfpn_s.yaml  stdetr_l.yaml  stdetr_ml.yaml  stdetr_ms.yaml  stdetr_s.yaml  stdetr_x.yaml  streamyolo_l.yaml  streamyolo_m.yaml  streamyolo_s.yaml  traque_drfpn_l.yaml  traque_drfpn_m.yaml  traque_drfpn_s.yaml  traque_pafpn_l.yaml  traque_pafpn_m.yaml  traque_pafpn_s.yaml  ts_drfpn_l.yaml  ts_drfpn_m.yaml  ts_drfpn_s.yaml  ts_pafpn_s.yaml
configs/paths/: default.yaml
configs/sap_runner/: default.yaml
configs/sap_strategy/: aq.yaml  aqex.yaml  dynamic.yaml  las.yaml  nobuf.yaml  (+1 more)
scripts/: _experimental.lsf  _experimental.sh  interactive.lsf  job.lsf  sap.lsf  sap_all.sh  sap_aq_pafpn.sh  search.lsf
src/: _experiment.py  _experimental.py  demo.py  eval.py  initialization.py  manual_search.py  sap.py  serve.py  train.py  workload.py
(+140 files in other folders)
